style.css
/* ... */
.learn-more:hover a,
.contact-btn:hover a {
  color: var(--primary);
}
.cta-btn {
  padding: 12px;
  border: none;
  border-radius: 8px;
  background: var(--primary);
  color: var(--light-1);
  cursor: pointer;
  text-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
  align-self: flex-start;
  transition: background 0.3s ease, opacity 1.5s ease-out,
    transform 1.5s ease-out;
}
.cta-btn:hover {
  background: var(--primary-color);
}

.nav-links {
  display: flex;
  gap: 8px;
}
.nav-links a {
  text-decoration: none;
  color: var(--dark-2);
  transition: color 0.3s ease;
  padding: 12px 0;
}
.nav-links a:hover {
  color: var(--primary);
}
.buttons {
  display: flex;
  gap: 16px;
}
.github-btn {
  display: flex;
  color: var(--dark-2);
  gap: 4px;
  padding: 12px;
  transition: color 0.3s ease, opacity 1.5s ease, transform 1.5s ease;
}
.github-btn:hover {
  color: var(--primary);
}
.github-btn svg {
  width: 12px;
  height: auto;
  fill: currentColor;
}

/*BOTTOM NAVBAR*/
.bottom-nav {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 80px;
  background: var(--light-1);
  border-radius: 40px 40px 0 0;
  align-content: center;
  border: 2px solid var(--light-3);
  box-sizing: border-box;
  z-index: 10;
}
.bottom-nav ul {
  display: flex;
  justify-content: space-evenly;
}
.nav-btn {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  color: var(--primary-dark);
  filter: grayscale(100%);
  transition: filter 0.3s ease;
}
.active {
  filter: grayscale(0%);
}
.nav-btn img {
  width: 6vw;
  max-width: 24px;
  height: auto;
}

/*MAIN*/
#zone {
  padding: 0 24px; /*screen margin*/
  margin: 0 auto;
}

/*HOME*/
#home {
  position: relative;
  scroll-margin: 110px;
}
img.shape {
  position: absolute;
  top: 20%;
  max-width: 110px;
  width: 16%;
  height: auto;
  z-index: -1;
  transition: transform 0.3s ease;
  bottom: 20px;
  right: 30px;
}
.shape {
  position: absolute;
  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
  width: 60px;
  height: 60px;
  bottom: 20px;
  right: 20px;
}

#home .first {
  display: flex;
  flex-direction: column;
  gap: 14px;
  padding: 40px 0;
  max-width: 550px;
}
#home h1 {
  max-width: 450px;
}
.highlight {
  color: var(--primary);
}
.cta {
  display: flex;
  gap: 8px;
}
.learn-more,
.contact-btn {
  padding: 12px;
  background: var(--light-2);
  border: 1px solid var(--light-3);
  border-radius: 8px;
  text-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
  color: var(--primary-dark);
  transition: color 0.3s ease, background 0.3s ease, border-color 0.3s ease;
}

#home .second {
  max-width: 500px;
  margin: 0 auto;
  display: block;
  width: 100%;
  height: auto;
  position: relative;
  aspect-ratio: 1; /* if you want to maintain square ratio */
}

/*Section 2: Brands*/
section#brands {
  margin: 32px 0;
  background: var(--light-3);
  padding: 5px 0;
  text-align: center;
  color: var(--primary-dark);
  display: flex;
  flex-direction: column;
  gap: 4px;
  border-radius: 24px;
  overflow: hidden;
}

.brands {
  height: 124px;
  width: -webkit-fill-available;
  margin: 0 64px;
  background: var(--light-3);
  color: var(--primary-dark);
  border-radius: 16px;
  text-align: center;
  font-size: var(--H5-pc);
}
.brands p {
  padding: 16px 0 0 0;
}
.logo-carousel {
  width: 100%;
  overflow: hidden;
  position: relative;
  max-height: 90px;
}

.logo-track {
  display: flex;
  align-items: center;
  gap: 2rem; /* Space between logos */
  width: max-content;
  animation: scroll 20s linear infinite;
  padding: 5px 15px;
}
.logo-track:hover {
  animation-play-state: paused;
}
.brand-logo {
  width: 20vw;
  height: auto;
  max-width: 100px;
  object-fit: contain;
}

@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%); /* Move by half the width */
  }
}

/*ABOUT*/
#about {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  scroll-margin: 100px;
}
#about .first {
  max-width: 600px;
  width: 100%;
  object-fit: contain;
}
#about img {
  max-width: 600px;
  height: 424px;
  width: 100%;
  object-fit: contain;
}
#about .second {
  max-width: 460px;
  display: flex;
  flex-direction: column;
  gap: 16px;
  justify-content: center;
}

/*COVERAGE*/
#coverage {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 14px;
  text-align: center;
  margin: 76px 0;
  scroll-margin: 70px;
}
.desc {
  max-width: 675px;
}
.map img {
  width: 100%;
  max-width: 700px;
}
.legend {
  border-radius: 8px;
  background: var(--light-2);
  border: 1px solid var(--light-3);
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 8px;
  height: fit-content;
  width: fit-content;
  padding: 8px;
}
.row {
  display: flex;
  flex-direction: row;
  gap: 4px;
  align-items: baseline;
}
.box1,
.box2,
.box3 {
  border-radius: 4px;
  height: 12px;
  width: 12px;
}
.box1 {
  background-color: #00d4aa;
}
.box2 {
  background-color: #008268;
}
.box3 {
  background-color: #2d534b;
}

/*FEATURES*/
#features {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 24px;
  scroll-margin: 140px;
}
#features .outline {
  position: absolute;
  width: 65vw;
  max-width: 340px;
  top: -70px;
  right: 15px;
  z-index: -1;
}
#features .first {
  display: flex;
  flex-direction: column;
  gap: 16px;
  min-width: 235px;
  max-width: 440px;
}

.features .second {
  display: flex;
  flex-direction: column;
  flex: 2;
}
.card {
  display: flex;
  width: 280px;
  box-sizing: border-box;
  height: -webkit-fill-available;
  padding: 8px 8px;
  border-radius: 12px;
  flex-direction: column;
  gap: 16px;
  animation: fade-in 1s ease forwards;
  transition: background 0.3s ease;
  background: #dfdfdf4f;
  align-items: center;
  text-align: center;
}
.card:hover {
  background: rgba(56, 228, 199, 0.25);
}

.card p {
  /* width: 270px; */
}

.card-grid {
  display: grid;
  position: relative;
  align-self: center;
}
/* ... */

